--- a/resources/css/custom.css
+++ b/resources/css/custom.css
@@ -1,6 +1,6 @@
 /* Custom CSS */
 
-@import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100;200;300;400;500;600;700;800;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Comic+Neue:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap');
 
 /* Custom styles for full page */
 html, #app, body, .body{
